Prepare waypoint fixes and dungeon secrets beta.
Adds the completed label/chat waypoint fixes and keeps dungeon secrets as beta work while room data and live trigger behavior are refined.